[project]
name = "graph-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp>=1.13.1",
    "msal>=1.33.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "types-requests>=2.32.4.20250809",
]
